// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`userContributions should render correctly when 0 contributions 1`] = `
.c2 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin-left: 100px;
  margin-right: 100px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c3 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #212121;
  margin-bottom: 40px;
}

.c4 {
  background: #ffffff;
  border-radius: 12px;
  width: 100%;
  height: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  font-weight: normal;
  font-size: 32px;
  line-height: 40px;
  color: #5e5e5e;
  margin-top: 52px;
  margin-bottom: 20px;
}

.c6 {
  font-weight: normal;
  font-size: 18px;
  line-height: 23px;
  color: #5e5e5e;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 40px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="star-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="star"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn black active"
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Mes fiches
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon icon_traduction"
      >
        <span
          className="regular"
        />
        <span
          className="hovered"
        />
      </span>
      Toolbar.Mes traductions
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="person-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="person"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn red "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Déconnexion
    </button>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        Vous n'avez pas encore rédigé de fiche.
      </div>
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          C'est parti ?
        </div>
        <div
          className="c6"
        >
          Chacun peut apporter sa contribution pour enrichir le site.
        </div>
        <div
          className="c6"
        >
          Lancez-vous !
        </div>
        <div
          className="c7"
        >
          <a
            className="btn  dark mr-10 "
            href="/comment-contribuer#ecrire"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span
              className="mr-10"
            >
              <i
                data-eva="file-add-outline"
                data-eva-fill="#fff"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
            Créer une nouvelle fiche
          </a>
          <button
            className="btn  tuto ml-10 "
            onClick={[Function]}
          >
            <span
              className="mr-10"
            >
              <i
                data-eva="video-outline"
                data-eva-fill="#fff"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
            Explications
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`userContributions should render correctly when click on delete 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-style: normal;
  font-size: 16px;
  line-height: 20px;
  max-width: 370px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

.c12 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c12:hover {
  background-color: #212121;
}

.c13 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c13:hover {
  background-color: #f44336;
}

.c2 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin-left: 100px;
  margin-right: 100px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c9 {
  font-weight: normal;
  font-size: 12px;
  line-height: 15px;
  color: #ffffff;
  background-color: #212121;
  padding: 8px;
  border-radius: 6px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  border: 1px solid #212121;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  cursor: pointer;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: bold;
  border-radius: 6px;
  padding: 8px;
  background-color: #FFEB3B;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  cursor: pointer;
  color: #212121;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c6 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c5 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  background: #ffffff;
  border-radius: 12px;
  width: 100%;
  padding: 20px;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="star-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="star"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn black active"
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Mes fiches
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon icon_traduction"
      >
        <span
          className="regular"
        />
        <span
          className="hovered"
        />
      </span>
      Toolbar.Mes traductions
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="person-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="person"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn red "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Déconnexion
    </button>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            Vous avez rédigé
          </div>
          <div
            className="c6"
          >
            1
          </div>
          <div
            className="c5"
          >
            fiche.
          </div>
        </div>
        <div>
          <button
            className="btn  tuto mr-8 "
            onClick={[Function]}
          >
            <span
              className="mr-10"
            >
              <i
                data-eva="video-outline"
                data-eva-fill="#fff"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
            Explications
          </button>
          <a
            className="btn  dark  "
            href="/comment-contribuer#ecrire"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span
              className="mr-10"
            >
              <i
                data-eva="file-add-outline"
                data-eva-fill="#fff"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
            Créer une nouvelle fiche
          </a>
        </div>
      </div>
      <div
        className="c7"
      >
        <div
          className="table-responsive"
        >
          <table
            className="table table-borderless"
          >
            <thead>
              <tr>
                <th>
                  Type
                </th>
                <th>
                  Titre
                </th>
                <th>
                  Responsabilité
                </th>
                <th>
                  <div
                    className="c8"
                    onClick={[Function]}
                  >
                    Statut
                    <span
                      className="ml-8"
                    >
                      <i
                        data-eva="question-mark-circle-outline"
                        data-eva-fill="#212121"
                        data-eva-height="20px"
                        data-eva-width="20px"
                      />
                    </span>
                  </div>
                </th>
                <th>
                  Merci
                </th>
                <th>
                  Vues
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                className="line"
                onClick={[Function]}
                testID="test_id1"
              >
                <td
                  className="first align-middle"
                >
                  <div
                    className="c9"
                  >
                    Dispositif
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div
                    className="c10"
                  >
                    <b>
                      titre info1
                    </b>
                    <span>
                      avec titreMarque1
                    </span>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div
                    className="c8"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                          "marginRight": "8px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="person-outline"
                          data-eva-fill="#212121"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                    Moi
                  </div>
                </td>
                <td
                  className="align-middle"
                  onClick={[Function]}
                >
                  <div
                    style={
                      Object {
                        "width": "120px",
                      }
                    }
                  >
                    <div
                      className="c11"
                      color="#FFEB3B"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      Brouillon
                    </div>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <span
                    aria-label="locked"
                    role="img"
                  >
                    🔒
                  </span>
                </td>
                <td
                  className="align-middle"
                >
                  <span
                    aria-label="locked"
                    role="img"
                  >
                    🔒
                  </span>
                </td>
                <td
                  className="last align-middle"
                >
                  <div
                    style={
                      Object {
                        "display": "flex",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <div
                      className="c12"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": "4px",
                          }
                        }
                      >
                        <span>
                          <i
                            data-eva="eye"
                            data-eva-fill="#ffffff"
                            data-eva-height="20px"
                            data-eva-width="20px"
                          />
                        </span>
                      </div>
                    </div>
                    <div
                      className="c13"
                      disabled={false}
                      onClick={[Function]}
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": "4px",
                          }
                        }
                      >
                        <span>
                          <i
                            data-eva="trash"
                            data-eva-fill="#ffffff"
                            data-eva-height="20px"
                            data-eva-width="20px"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`userContributions should render correctly when contributions 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-style: normal;
  font-size: 16px;
  line-height: 20px;
  max-width: 370px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

.c12 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c12:hover {
  background-color: #212121;
}

.c13 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c13:hover {
  background-color: #f44336;
}

.c17 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: not-allowed;
}

.c17:hover {
  background-color: #828282;
}

.c2 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin-left: 100px;
  margin-right: 100px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c9 {
  font-weight: normal;
  font-size: 12px;
  line-height: 15px;
  color: #ffffff;
  background-color: #212121;
  padding: 8px;
  border-radius: 6px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  border: 1px solid #212121;
}

.c14 {
  font-weight: normal;
  font-size: 12px;
  line-height: 15px;
  color: #212121;
  background-color: #ffffff;
  padding: 8px;
  border-radius: 6px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  border: 1px solid #212121;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  cursor: pointer;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: bold;
  border-radius: 6px;
  padding: 8px;
  background-color: #FFEB3B;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  cursor: pointer;
  color: #212121;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: bold;
  border-radius: 6px;
  padding: 8px;
  background-color: #FF9800;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  cursor: pointer;
  color: #ffffff;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: bold;
  border-radius: 6px;
  padding: 8px;
  background-color: #8BC34A;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  cursor: pointer;
  color: #ffffff;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: bold;
  border-radius: 6px;
  padding: 8px;
  background-color: #F44336;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  cursor: pointer;
  color: #ffffff;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: bold;
  border-radius: 6px;
  padding: 8px;
  background-color: #4CAF50;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  cursor: pointer;
  color: #ffffff;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c6 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c5 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  background: #ffffff;
  border-radius: 12px;
  width: 100%;
  padding: 20px;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="star-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="star"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn black active"
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Mes fiches
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon icon_traduction"
      >
        <span
          className="regular"
        />
        <span
          className="hovered"
        />
      </span>
      Toolbar.Mes traductions
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="person-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="person"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn red "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Déconnexion
    </button>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            Vous avez rédigé
          </div>
          <div
            className="c6"
          >
            7
          </div>
          <div
            className="c5"
          >
            fiches.
          </div>
        </div>
        <div>
          <button
            className="btn  tuto mr-8 "
            onClick={[Function]}
          >
            <span
              className="mr-10"
            >
              <i
                data-eva="video-outline"
                data-eva-fill="#fff"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
            Explications
          </button>
          <a
            className="btn  dark  "
            href="/comment-contribuer#ecrire"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span
              className="mr-10"
            >
              <i
                data-eva="file-add-outline"
                data-eva-fill="#fff"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
            Créer une nouvelle fiche
          </a>
        </div>
      </div>
      <div
        className="c7"
      >
        <div
          className="table-responsive"
        >
          <table
            className="table table-borderless"
          >
            <thead>
              <tr>
                <th>
                  Type
                </th>
                <th>
                  Titre
                </th>
                <th>
                  Responsabilité
                </th>
                <th>
                  <div
                    className="c8"
                    onClick={[Function]}
                  >
                    Statut
                    <span
                      className="ml-8"
                    >
                      <i
                        data-eva="question-mark-circle-outline"
                        data-eva-fill="#212121"
                        data-eva-height="20px"
                        data-eva-width="20px"
                      />
                    </span>
                  </div>
                </th>
                <th>
                  Merci
                </th>
                <th>
                  Vues
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                className="line"
                onClick={[Function]}
                testID="test_id1"
              >
                <td
                  className="first align-middle"
                >
                  <div
                    className="c9"
                  >
                    Dispositif
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div
                    className="c10"
                  >
                    <b>
                      titre info1
                    </b>
                    <span>
                      avec titreMarque1
                    </span>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div
                    className="c8"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                          "marginRight": "8px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="person-outline"
                          data-eva-fill="#212121"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                    Moi
                  </div>
                </td>
                <td
                  className="align-middle"
                  onClick={[Function]}
                >
                  <div
                    style={
                      Object {
                        "width": "120px",
                      }
                    }
                  >
                    <div
                      className="c11"
                      color="#FFEB3B"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      Brouillon
                    </div>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <span
                    aria-label="locked"
                    role="img"
                  >
                    🔒
                  </span>
                </td>
                <td
                  className="align-middle"
                >
                  <span
                    aria-label="locked"
                    role="img"
                  >
                    🔒
                  </span>
                </td>
                <td
                  className="last align-middle"
                >
                  <div
                    style={
                      Object {
                        "display": "flex",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <div
                      className="c12"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": "4px",
                          }
                        }
                      >
                        <span>
                          <i
                            data-eva="eye"
                            data-eva-fill="#ffffff"
                            data-eva-height="20px"
                            data-eva-width="20px"
                          />
                        </span>
                      </div>
                    </div>
                    <div
                      className="c13"
                      disabled={false}
                      onClick={[Function]}
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": "4px",
                          }
                        }
                      >
                        <span>
                          <i
                            data-eva="trash"
                            data-eva-fill="#ffffff"
                            data-eva-height="20px"
                            data-eva-width="20px"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                className="line"
                onClick={[Function]}
                testID="test_id2"
              >
                <td
                  className="first align-middle"
                >
                  <div
                    className="c14"
                  >
                    Démarche
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div
                    className="c10"
                  >
                    <b>
                      titre info2
                    </b>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div
                    className="c8"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                          "marginRight": "8px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="person-outline"
                          data-eva-fill="#212121"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                    Moi
                  </div>
                </td>
                <td
                  className="align-middle"
                  onClick={[Function]}
                >
                  <div
                    style={
                      Object {
                        "width": "120px",
                      }
                    }
                  >
                    <div
                      className="c15"
                      color="#FF9800"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      En attente
                    </div>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <span
                    aria-label="locked"
                    role="img"
                  >
                    🔒
                  </span>
                </td>
                <td
                  className="align-middle"
                >
                  <span
                    aria-label="locked"
                    role="img"
                  >
                    🔒
                  </span>
                </td>
                <td
                  className="last align-middle"
                >
                  <div
                    style={
                      Object {
                        "display": "flex",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <div
                      className="c12"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": "4px",
                          }
                        }
                      >
                        <span>
                          <i
                            data-eva="eye"
                            data-eva-fill="#ffffff"
                            data-eva-height="20px"
                            data-eva-width="20px"
                          />
                        </span>
                      </div>
                    </div>
                    <div
                      className="c13"
                      disabled={false}
                      onClick={[Function]}
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": "4px",
                          }
                        }
                      >
                        <span>
                          <i
                            data-eva="trash"
                            data-eva-fill="#ffffff"
                            data-eva-height="20px"
                            data-eva-width="20px"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                className="line"
                onClick={[Function]}
                testID="test_id3"
              >
                <td
                  className="first align-middle"
                >
                  <div
                    className="c14"
                  >
                    Démarche
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div
                    className="c10"
                  >
                    <b>
                      titre info3
                    </b>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div
                    className="c8"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                          "marginRight": "8px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="briefcase-outline"
                          data-eva-fill="#212121"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                    sponsor
                  </div>
                </td>
                <td
                  className="align-middle"
                  onClick={[Function]}
                >
                  <div
                    style={
                      Object {
                        "width": "120px",
                      }
                    }
                  >
                    <div
                      className="c16"
                      color="#8BC34A"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      À valider
                    </div>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <span
                    aria-label="locked"
                    role="img"
                  >
                    🔒
                  </span>
                </td>
                <td
                  className="align-middle"
                >
                  <span
                    aria-label="locked"
                    role="img"
                  >
                    🔒
                  </span>
                </td>
                <td
                  className="last align-middle"
                >
                  <div
                    style={
                      Object {
                        "display": "flex",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <div
                      className="c12"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": "4px",
                          }
                        }
                      >
                        <span>
                          <i
                            data-eva="eye"
                            data-eva-fill="#ffffff"
                            data-eva-height="20px"
                            data-eva-width="20px"
                          />
                        </span>
                      </div>
                    </div>
                    <div
                      className="c17"
                      disabled={true}
                      onClick={[Function]}
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": "4px",
                          }
                        }
                      >
                        <span>
                          <i
                            data-eva="trash"
                            data-eva-fill="#ffffff"
                            data-eva-height="20px"
                            data-eva-width="20px"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                className="line"
                onClick={[Function]}
                testID="test_id4"
              >
                <td
                  className="first align-middle"
                >
                  <div
                    className="c14"
                  >
                    Démarche
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div
                    className="c10"
                  >
                    <b>
                      titre info4
                    </b>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div
                    className="c8"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                          "marginRight": "8px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="briefcase-outline"
                          data-eva-fill="#212121"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                    sponsor
                  </div>
                </td>
                <td
                  className="align-middle"
                  onClick={[Function]}
                >
                  <div
                    style={
                      Object {
                        "width": "120px",
                      }
                    }
                  >
                    <div
                      className="c15"
                      color="#FF9800"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      Accepté
                    </div>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <span
                    aria-label="locked"
                    role="img"
                  >
                    🔒
                  </span>
                </td>
                <td
                  className="align-middle"
                >
                  <span
                    aria-label="locked"
                    role="img"
                  >
                    🔒
                  </span>
                </td>
                <td
                  className="last align-middle"
                >
                  <div
                    style={
                      Object {
                        "display": "flex",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <div
                      className="c12"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": "4px",
                          }
                        }
                      >
                        <span>
                          <i
                            data-eva="eye"
                            data-eva-fill="#ffffff"
                            data-eva-height="20px"
                            data-eva-width="20px"
                          />
                        </span>
                      </div>
                    </div>
                    <div
                      className="c17"
                      disabled={true}
                      onClick={[Function]}
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": "4px",
                          }
                        }
                      >
                        <span>
                          <i
                            data-eva="trash"
                            data-eva-fill="#ffffff"
                            data-eva-height="20px"
                            data-eva-width="20px"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                className="line"
                onClick={[Function]}
                testID="test_id5"
              >
                <td
                  className="first align-middle"
                >
                  <div
                    className="c14"
                  >
                    Démarche
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div
                    className="c10"
                  >
                    <b>
                      titre info5
                    </b>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div
                    className="c8"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                          "marginRight": "8px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="person-outline"
                          data-eva-fill="#212121"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                    Moi
                  </div>
                </td>
                <td
                  className="align-middle"
                  onClick={[Function]}
                >
                  <div
                    style={
                      Object {
                        "width": "120px",
                      }
                    }
                  >
                    <div
                      className="c18"
                      color="#F44336"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      Rejeté
                    </div>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <span
                    aria-label="locked"
                    role="img"
                  >
                    🔒
                  </span>
                </td>
                <td
                  className="align-middle"
                >
                  <span
                    aria-label="locked"
                    role="img"
                  >
                    🔒
                  </span>
                </td>
                <td
                  className="last align-middle"
                >
                  <div
                    style={
                      Object {
                        "display": "flex",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <div
                      className="c12"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": "4px",
                          }
                        }
                      >
                        <span>
                          <i
                            data-eva="eye"
                            data-eva-fill="#ffffff"
                            data-eva-height="20px"
                            data-eva-width="20px"
                          />
                        </span>
                      </div>
                    </div>
                    <div
                      className="c13"
                      disabled={false}
                      onClick={[Function]}
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": "4px",
                          }
                        }
                      >
                        <span>
                          <i
                            data-eva="trash"
                            data-eva-fill="#ffffff"
                            data-eva-height="20px"
                            data-eva-width="20px"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                className="line"
                onClick={[Function]}
                testID="test_id6"
              >
                <td
                  className="first align-middle"
                >
                  <div
                    className="c14"
                  >
                    Démarche
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div
                    className="c10"
                  >
                    <b>
                      titre info6
                    </b>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div
                    className="c8"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                          "marginRight": "8px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="briefcase-outline"
                          data-eva-fill="#212121"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                    sponsor
                  </div>
                </td>
                <td
                  className="align-middle"
                  onClick={[Function]}
                >
                  <div
                    style={
                      Object {
                        "width": "120px",
                      }
                    }
                  >
                    <div
                      className="c19"
                      color="#4CAF50"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      Publié
                    </div>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div>
                    0 
                    <span
                      aria-label="thanks"
                      role="img"
                    >
                      🙏
                    </span>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div>
                    10
                    <span
                      aria-label="nbVues"
                      role="img"
                    >
                      📈
                    </span>
                  </div>
                </td>
                <td
                  className="last align-middle"
                >
                  <div
                    style={
                      Object {
                        "display": "flex",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <div
                      className="c12"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": "4px",
                          }
                        }
                      >
                        <span>
                          <i
                            data-eva="eye"
                            data-eva-fill="#ffffff"
                            data-eva-height="20px"
                            data-eva-width="20px"
                          />
                        </span>
                      </div>
                    </div>
                    <div
                      className="c17"
                      disabled={true}
                      onClick={[Function]}
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": "4px",
                          }
                        }
                      >
                        <span>
                          <i
                            data-eva="trash"
                            data-eva-fill="#ffffff"
                            data-eva-height="20px"
                            data-eva-width="20px"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                className="line"
                onClick={[Function]}
                testID="test_id7"
              >
                <td
                  className="first align-middle"
                >
                  <div
                    className="c14"
                  >
                    Démarche
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div
                    className="c10"
                  >
                    <b>
                      titre info7
                    </b>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div
                    className="c8"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                          "marginRight": "8px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="briefcase-outline"
                          data-eva-fill="#212121"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                    main
                  </div>
                </td>
                <td
                  className="align-middle"
                  onClick={[Function]}
                >
                  <div
                    style={
                      Object {
                        "width": "120px",
                      }
                    }
                  >
                    <div
                      className="c19"
                      color="#4CAF50"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      Publié
                    </div>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div>
                    0 
                    <span
                      aria-label="thanks"
                      role="img"
                    >
                      🙏
                    </span>
                  </div>
                </td>
                <td
                  className="align-middle"
                >
                  <div>
                    10
                    <span
                      aria-label="nbVues"
                      role="img"
                    >
                      📈
                    </span>
                  </div>
                </td>
                <td
                  className="last align-middle"
                >
                  <div
                    style={
                      Object {
                        "display": "flex",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <div
                      className="c12"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": "4px",
                          }
                        }
                      >
                        <span>
                          <i
                            data-eva="eye"
                            data-eva-fill="#ffffff"
                            data-eva-height="20px"
                            data-eva-width="20px"
                          />
                        </span>
                      </div>
                    </div>
                    <div
                      className="c13"
                      disabled={false}
                      onClick={[Function]}
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": "4px",
                          }
                        }
                      >
                        <span>
                          <i
                            data-eva="trash"
                            data-eva-fill="#ffffff"
                            data-eva-height="20px"
                            data-eva-width="20px"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`userContributions should render correctly when loading 1`] = `
.c2 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin-left: 100px;
  margin-right: 100px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c4 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="star-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="star"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn black active"
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Mes fiches
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon icon_traduction"
      >
        <span
          className="regular"
        />
        <span
          className="hovered"
        />
      </span>
      Toolbar.Mes traductions
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="person-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="person"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn red "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Déconnexion
    </button>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          Vous avez rédigé
        </div>
        <div
          className="c5"
        >
          ...
        </div>
        <div
          className="c4"
        >
          fiche.
        </div>
      </div>
      <span>
        <span
          className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
          style={
            Object {
              "height": 50,
            }
          }
        >
          ‌
        </span>
        <span
          className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
          style={
            Object {
              "height": 50,
            }
          }
        >
          ‌
        </span>
        <span
          className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
          style={
            Object {
              "height": 50,
            }
          }
        >
          ‌
        </span>
      </span>
    </div>
  </div>
</div>
`;
